--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   </p>
   <hr color=black>
   <a href="hobbies.html">Hobbies</a>
-  <a href="Contact.html">Contact</a>
+  <a href="contact.html">Contact</a>
 
 </body>
 
