--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="images\0.jpg" alt="Ural profile pic"></td>
       <td>
         <h1>Ural Huneli Erdamar</h1>
-        <p><em>Electric and Electronics Engineer</em></p>
+        <h3><em>Electric and Electronics Engineer</em></h3>
 
       </td>
     </tr>
@@ -25,11 +25,8 @@
     <li><a href="http://www.ee.bilkent.edu.tr/en/">Bilkent University Electric and Electronics Engineering</a></li>
     <li><a href="https://www.odtugvo.k12.tr/ankara/">Middle East Technical University Foundation High School</a></li>
   </ul>
-  <a download href="mezuniyetTranscript.pdf">Download My Transcript</a>
   <hr color=black>
   <h3>Work Experiances</h3>
-
-
   <p>
     <table>
       <thead>
@@ -39,6 +36,10 @@
         </tr>
       </thead>
       <tbody>
+        <tr>
+          <td>2019-Present</td>
+          <td>Hanay&Bulut Law Firm: Electric and Electronics Engineering Consultant/Partner</td>
+        </tr>
         <tr>
           <td>2018</td>
           <td>SolarGuc: PrSoject Engineer</td>
@@ -84,15 +85,34 @@
         <td>HTML</td>
         <td>⭐⭐⭐⭐ </td>
       </tr>
+      
       <tr>
         <td>Machine Learning</td>
         <td>⭐⭐⭐ </td>
         <td>C++</td>
         <td>⭐⭐⭐⭐ </td>
       </tr>
-      <tr>
+       <tr>
         <td>Telecominication Systems</td>
         <td>⭐⭐⭐ </td>
+        <td>HTML</td>
+        <td>⭐⭐⭐⭐ </td>
+      </tr>
+       <tr>
+        <td></td>
+        <td></td>
+        <td>CSS</td>
+        <td>⭐⭐⭐⭐ </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td>JS</td>
+        <td>⭐⭐⭐⭐ </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
         <td>Embeded Language</td>
         <td>⭐⭐⭐ </td>
       </tr>
@@ -102,7 +122,8 @@
   </p>
   <hr color=black>
   <a href="hobbies.html">Hobbies</a>
-  <a href="contact.html">Contact</a>
+  <a href="contact.html">Contact Me</a>
+  <a href="Ural_H_Erdamar-Resume2019JUL Final withPageNumbers.pdf" download target="_blank">Heres my Resume</a>
 
 </body>
 
