--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images\0.jpg" alt="Ural profile pic"></td>
+      <td><img src="profilePicRound.jpg" alt="Ural profile pic"></td>
       <td>
         <h1>Ural Huneli Erdamar</h1>
         <h3><em>Electric and Electronics Engineer</em></h3>
