--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <h3>Education</h3>
   <ul>
-    <li><a href="http://www.ee.bilkent.edu.tr/en/">Bilkent University Electric and Electronics Engineering</a></li>
-    <li><a href="https://www.odtugvo.k12.tr/ankara/">Middle East Technical University Foundation High School</a></li>
+    <li><a href="http://www.ee.bilkent.edu.tr/en/" target="_blank">Bilkent University Electric and Electronics Engineering</a></li>
+    <li><a href="https://www.odtugvo.k12.tr/ankara/" target="_blank">Middle East Technical University Foundation High School</a></li>
   </ul>
   <hr color=black>
   <h3>Work Experiances</h3>
