--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <hr color=black>
   <a href="hobbies.html">Hobbies</a>
   <a href="contact.html">Contact Me</a>
-  <a href="Ural_H_Erdamar-Resume2019JUL Final withPageNumbers.pdf" download target="_blank">Heres my Resume</a>
+  <a href="documents\Ural_H_Erdamar-Resume2019JUL Final withPageNumbers.pdf" download target="_blank">Heres my Resume</a>
 
 </body>
 
